--- a/client/admin-tool/src/css/TextEditor.css
+++ b/client/admin-tool/src/css/TextEditor.css
@@ -56,3 +56,25 @@
 .rdw-option-disabled {
   cursor: not-allowed;
 }
+
+/* Styling the scroll bar for the overview/theme */
+/* width */
+.editor-class::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+.editor-class::-webkit-scrollbar-track {
+  background: rgb(240, 240, 240);
+}
+
+/* Handle */
+.editor-class::-webkit-scrollbar-thumb {
+  background: var(--lightpurple);
+  border-radius: 50px;
+}
+
+/* Handle on hover */
+.editor-class::-webkit-scrollbar-thumb:hover {
+  background: var(--darkpurple);
+}
